[package]
name = "mingbu"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A comprehensive Chinese metaphysics library with Swiss Ephemeris integration"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
cc = "1.0"
